refactor(backend:shared): Operator的放在vb包下